@@ -1,1 +1,1 @@
-#define SERIALNUM "20001201_1"
+#define SERIALNUM "20001221_2"
